--- a/src/app/style.css
+++ b/src/app/style.css
@@ -1,6 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=News+Cycle:400,700);
-html,
-body {
+html,body{
   width: 100%;
   height: 100%;
   font: 700 1em "News Cycle", sans-serif;
