--- a/src/app/sw-html/sw-html.component.html
+++ b/src/app/sw-html/sw-html.component.html
@@ -1,4 +1,3 @@
- 
  <article class="starwars">
   <audio preload="auto">
     <source src="http://s.cdpn.io/1202/Star_Wars_original_opening_crawl_1977.ogg" type="audio/ogg" />
@@ -9,7 +8,7 @@
     <p>
       Start <br> <span>Star Wars opening crawl</span> <br> from 1977
       <br>
-      <span>Remake by Tim Pietrusky</span>
+      
     </p>
   </section>
    
@@ -26,17 +25,15 @@
         Rebel students, striking
         from a hidden base(or too expensive living quarters), have won
         their first victory against
-        their teachers mandatory assingment.
-				
-    
+        their teachers mandatory assingment.    
       </p>
 
       <p>
         During the battle, Rebel
         spies managed to steal secret
         plans to the Empire's
-        ultimate weapon, the DEATH
-        STAR, an armored space
+        ultimate weapon, the <span class="txt-style"> DEATH
+        STAR</span>, an armored space
         station with enough power to
         destroy an entire planet.
       </p>
