--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
  <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+      <button type="button" class="navbar-toggle collapsed pull-left" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
@@ -12,9 +12,9 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-         <a routerLink="/sw-html" routerLinkActive="active">Home</a>
-        <a routerLink="/all-people" routerLinkActive="active">People</a>
-        <a routerLink="/people-search" routerLinkActive="active">Search</a>
+        <li> <a routerLink="/sw-html" routerLinkActive="active">Home</a></li>
+        <li><a routerLink="/all-people" routerLinkActive="active">People</a></li>
+        <li><a routerLink="/people-search" routerLinkActive="active">Search</a></li>
         
       </ul>
      
